--- a/resources/index.html
+++ b/resources/index.html
@@ -33,7 +33,8 @@
     <img src="./images/welcom.png" alt="images of icc antwerp">
     <div class="welcome__banner--text">
       <h6>Bienvenue à</h6>
-      <h1>Impact Centre Chrétien Anvers</h1>
+      <h1>Impact Centre 
+        Chrétien Anvers</h1>
     </div>
    </div>
   <!-- Hero Section -->
